# maxProd

./: CHANGELOG.md  LICENSE  README.md  maxProd.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: package.cache
src/Sort/: MergeSort.hs  Quicksort.hs
