cabal-version:      2.4
name:               maxProd
version:            0.0.1

license:            MIT
license-file:       LICENSE
copyright:          2023 Khan Mohammad R.

description:        leetCode 628: Given a list of numbers, find three numbers whose product is maximum and return the maximum product.

author:             Khan Mohammad R.
maintainer:         codemascot@hotmail.com

homepage:           https://github.com/codemascot/maxProd
bug-reports:        https://github.com/codemascot/maxProd/issues
build-type:         Simple
tested-with:        GHC==8.10.7

extra-source-files: CHANGELOG.md
                    README.md

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Sort.Quicksort
                  , Sort.MergeSort
  build-depends:    base ^>=4.14.3.0
  hs-source-dirs:   src
  default-language: Haskell2010
                    
executable maxProd
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , maxProd
    hs-source-dirs:   app
    default-language: Haskell2010
